# binary-quadratic-regression

./: README.md  Taskfile.yml  lefthook.yml  mise.toml  package-lock.json  pyproject.toml
src/bqr/: __init__.py  _quadratic_regression.py  _utils.py
src/bqr/child_regression/: __init__.py  _regressor.py
tests/: test_qr.py  test_qr_sa.py  test_qr_sklearn.py
